k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summitodoro
  namespace: summitodoro
  labels:
    app.kubernetes.io/name: summitodoro
    app.kubernetes.io/component: web

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: summitodoro

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
